# gravity

./: .gitignore  .gitmodules  .ycm_extra_conf.py  Body.h  CMakeLists.txt  CentralGravity.h  Effect.h  Energy.h  Model.cc  Model.h  Orbit.cc  Orbit.h  Vector3.h  config.toml  configuration.cc  configuration.h  gravity.cc  gravity.h  main.cc  main.py  natural_units.h  play.py  plot.py  point.h  true_main.cc  util.h
scripts/: main.py  plot.py
seminar/: mybib.bib  phase_portrait.py  seminar.tex
tests/force_performance/: Makefile  array_one_loop.cc  boost_point.cc  common.h  point_type.hpp  scenario.h  valarray.cc  vector_one_loop.cc  vector_reduced_loops.cc  vector_separate_loops.cc
