cmake_minimum_required (VERSION 3.10)
project (gravity)
add_library(gravity gravity.cc)
add_library(true_gravity true_gravity.cc)
add_executable(main main.cc)
add_executable(true_main true_main.cc)
target_link_libraries(main gravity)
target_link_libraries(true_main true_gravity)
include_directories (".")
